--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/books.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.activation.jar=C:\\Users\\3badi\\Desktop\\activation.jar
+file.reference.AlienRFID.jar=C:\\Users\\3badi\\Desktop\\Alien_Java_SDK_v2.3.5_2014_01\\jars\\AlienRFID.jar
+file.reference.java-mail-1.4.4.jar=C:\\Users\\3badi\\Desktop\\java-mail-1.4.4.jar
+file.reference.ojdbc7.jar=C:\\Users\\3badi\\Desktop\\ojdbc7.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.AlienRFID.jar}:\
+    ${file.reference.ojdbc7.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.java-mail-1.4.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
