we have added new interfaces to our system as well as edited the code of some functions.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ javac.classpath=\
     ${file.reference.AlienRFID.jar}:\
     ${file.reference.ojdbc7.jar}:\
     ${file.reference.activation.jar}:\
-    ${file.reference.java-mail-1.4.4.jar}
+    ${file.reference.java-mail-1.4.4.jar}:\
+    ${libs.Poi.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
