--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.activation.jar=C:\\Users\\3badi\\Desktop\\activation.jar
 file.reference.AlienRFID.jar=C:\\Users\\3badi\\Desktop\\Alien_Java_SDK_v2.3.5_2014_01\\jars\\AlienRFID.jar
 file.reference.java-mail-1.4.4.jar=C:\\Users\\3badi\\Desktop\\java-mail-1.4.4.jar
 file.reference.ojdbc7.jar=C:\\Users\\3badi\\Desktop\\ojdbc7.jar
+file.reference.poi-3.17.jar=C:\\Users\\3badi\\Desktop\\poi-3.17\\poi-3.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -38,7 +39,8 @@ javac.classpath=\
     ${file.reference.ojdbc7.jar}:\
     ${file.reference.activation.jar}:\
     ${file.reference.java-mail-1.4.4.jar}:\
-    ${libs.Poi.classpath}
+    ${libs.Poi.classpath}:\
+    ${file.reference.poi-3.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
